add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -314,8 +314,11 @@
                 <h2 class="newsletter__info">Підписка</h2>
                 <p class="newsletter__information">Бути в курсі всіх актуальних подій та останніх новин.</p>
               </div>
-
-              <div class="newsletter__contact">
+              <form
+                class="newsletter__contact" id="form"
+                method="post"
+                action="#"
+              >
                 <label class="action--input">
                   <input
                     class="input"
@@ -324,13 +327,13 @@
                     placeholder="E-mail"
                     size="28"
                     value=" "
-                    id="myInput"
                     required
+                    id="myInput"
                   >
                 </label>
                 <button
-                  onclick="document.getElementById('myInput').value = ''"
-                  type="reset"
+                  form="form"
+                  type="submit"
                   class="newsletter__send"
                 >
                   <svg
@@ -350,7 +353,7 @@
                     </defs>
                   </svg>
                 </button>
-              </div>
+              </form>
             </div>
           </div>
         </div>
