add some styles for header and basic hero markup

--- a/src/index.html
+++ b/src/index.html
@@ -77,15 +77,33 @@
               </li>
             </ul>
 
-            <p class="menu__timetable-text">
-              <span>Вихідні:</span> понеділок, вівторок
-              Каса припиняє роботу за 1 годину
-              до закриття музею
-            </p>
+            <div class="menu__timetable-texts">
+              <p class="menu__timetable-text">
+                <span>Вихідні:</span> понеділок, вівторок
+              </p>
+
+              <p class="menu__timetable-text">
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </aside>
+
+    <main class="main">
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero__title">
+            художній музей
+          </h1>
+          <button class="hero__btn btn" type="button">квитки</button>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer"></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
