--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,232 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+
+    <header class="header">
+      <div class="header__logo">
+        <div class="header__cards">
+          <div class="header__menu"></div>
+          <div class="header__namu"></div>
+        </div>
+      </div>
+
+      <div class="header__menu__tablet"></div>
+
+      <h1 class="header__text">ХУДОЖНІЙ МУЗЕЙ</h1>
+      <button class="header__button">
+        <span class="header__color-part">
+          <div class="header__arrow"></div>
+        </span>
+        <span class="header__text-part">КВИТКИ</span>
+      </button>
+
+      <div class="header__bottom">
+        <hr class="header__hr">
+        <p class="header__podii">події</p>
+      </div>
+    </header>
+
+    <main class="events">
+      <h1 class="events__title" id="podii">Актуальні події</h1>
+      <div class="events__foto1"></div>
+
+      <div class="events__text">
+        <h2 class="events__exhibition">ВИСТАВКА</h2>
+        <h3 class="events__date">26.08-29.11.2019</h3>
+      </div>
+
+      <div class="events__block">
+        <p class="events__name">Йду і повертаюсь</p>
+        <div class="events__icon"></div>
+      </div>
+
+      <p class="events__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+
+      <div class="events__foto2"></div>
+
+      <div class="events__text2">
+        <h2 class="events__exhibition2">ВИСТАВКА</h2>
+        <h3 class="events__date2">26.08-29.11.2019</h3>
+      </div>
+
+      <div class="events__block2">
+        <p class="events__name2">І спогади і мрії</p>
+        <div class="events__icon2"></div>
+      </div>
+
+      <p class="events__description2">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+    </main>
+
+    <main class="lecture">
+      <div class="lecture__foto3"></div>
+    </main>
+
+    <main class="galery">
+      <div class="galery__block">
+        <h2 class="galery__lecture">ЛЕКЦІЯ</h2>
+        <h3 class="galery__date">26/08/2019 - 11:00</h3>
+
+        <h1 class="galery__text--tablet">Від класицизму до романтизму</h1>
+      </div>
+
+      <h1 class="galery__text">Від класицизму до романтизму</h1>
+    </main>
+
+    <main class="selection">
+      <h1 class="selection__title" id="gallery">Галерея</h1>
+      <div class="selection__foto"></div>
+      <div class="selection__swith"></div>
+      <div class="selection__foto2"></div>
+      <div class="selection__foto2pc"></div>
+      <div class="selection__foto3"></div>
+      <div class="selection__foto4"></div>
+    </main>
+
+    <main class="footer">
+      <div class="footer__foto">
+        <h1 class="footer__sub">Підписка</h1>
+        <p class="footer__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <div class="footer__block">
+          <form class="footer__form">
+            <input type="email" class="footer__input"
+              placeholder="E-mail">
+          </form>
+
+          <button class="footer__button">
+
+            <script>
+              const inputField = document.querySelector('.footer__input');
+              const button = document.querySelector('.footer__button');
+
+              button.addEventListener('click', function() {
+                inputField.value = '';
+              });
+            </script>
+
+            <div class="footer__strelka"></div>
+          </button>
+        </div>
+      </div>
+    </main>
+
+    <footer class="lastpage">
+      <div class="lastpage__block">
+        <a href="#" class="lastpage__decoration lastpage__logo">NA MU</a>
+        <a href="https://www.facebook.com/?locale=uk_UA" class="lastpage__margin lastpage__facebook"></a>
+        <a href="https://www.instagram.com/" class="lastpage__decoration lastpage__instagram"></a>
+      </div>
+
+      <div class="lastpage__textblock">
+        <p class="lastpage__grafik">Графік роботи</p>
+        <p class="lastpage__contact">Контакти:</p>
+        <pre class="lastpage__time">
+12:00 — 20:00
+середа
+12:00 — 20:00
+четвер
+12:00 — 20:00
+п’ятниця
+11:00 — 19:00
+субота
+11:00 — 19:00
+неділя
+        </pre>
+
+        <pre class="lastpage__adress">
+вул. М.
+Грушевського, 6;
+Київ, 01001
+тел. +38 (044)
+278-13-57
+факс +38 (044)
+278-74-54
+e-mail:
+info@namu.kiev.ua
+        </pre>
+      </div>
+
+      <p class="lastpage__vihid">Вихідні понеділок,
+      вівторок
+      Каса припиняє роботу за 1 годину
+      до закриття музею
+      </p>
+
+      <a href="#" class="lastpage__up"></a>
+
+      <hr class="lastpage__hr">
+
+      <div class="lastpage__blockk">
+        <a href="#gallery" class="lastpage__gallery">Галерея</a>
+        <a href="#podii" class="lastpage__podii">Виставки та події</a>
+      </div>
+
+      <div class="lastpage__contactblock">
+        <a href="#" class="lastpage__gallery">Про Нас</a>
+        <a href="#contact" class="lastpage__podii"
+          id="contact">Контакти</a>
+      </div>
+
+      <p class="lastpage__designed">Designed by Zhyriada Marina</p>
+      <p class="lastpage__Copyright">Copyright © 2019. All Rights Reserved.</p>
+    </footer>
+
+    <footer class="lastpage2">
+      <div class="lastpage2__logoblock">
+        <h1 href="#" class="lastpage2__logo">NA MU</h1>
+
+        <div class="lastpage2__block">
+          <a href="https://www.facebook.com/?locale=uk_UA" class="lastpage2__facebook"></a>
+          <a href="https://www.instagram.com/" class="lastpage2__instagram"></a>
+        </div>
+      </div>
+
+      <div class="lastpage2__timeblock">
+        <h2 class="lastpage2__grafik">Графік роботи</h2>
+        <pre class="lastpage2__time">
+12:00 — 20:00 середа
+12:00 — 20:00 четвер
+12:00 — 20:00 п’ятниця
+11:00 — 19:00 субота
+11:00 — 19:00 неділя
+        </pre>
+
+        <p class="lastpage2__dayoff">Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею</p>
+      </div>
+      <div class="lastpage2__contactblock">
+        <h2 class="lastpage2__contact">Контакти:</h2>
+        <pre class="lastpage2__tell">
+вул. М. Грушевського, 6; Київ,
+01001
+тел. +38 (044) 278-13-57
+факс +38 (044) 278-74-54
+e-mail: info@namu.kiev.ua
+        </pre>
+      </div>
+
+      <hr class="lastpage2__hr">
+
+      <div class="lastpage2__galeryblock">
+        <a href="#gallery" class="lastpage2__gallery">Галерея</a>
+        <a href="#podii" class="lastpage2__podii">Виставки та події</a>
+      </div>
+
+      <div class="lastpage2__blockabout">
+        <a href="#" class="lastpage2__aboutas">Про Нас</a>
+        <a href="#contact" class="lastpage2__cont">Контакти</a>
+      </div>
+
+      <h2 class="lastpage2__copyright">Copyright © 2019. All Rights Reserved.</h2>
+      <h2 class="lastpage2__designed">Designed by Zhyriada Marina</h2>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
