--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,86 @@
         </div>
       </div>
 
+      <div class="header__fullscreen">
+        <div class="header__flex">
+          <div class="header__exit"></div>
+          <div class="header__fullblock">
+            <a href="#gallery" class="header__fullgalery">Галерея</a>
+            <a href="#podii" class="header__fullpodii">Виставки та події</a>
+          </div>
+
+          <div class="header__fullblock2">
+            <a href="#" class="header__fullaboutas">Про Нас</a>
+            <a href="#contact" class="header__fullcontact">Контакти</a>
+          </div>
+
+          <hr class="header__fullhr2">
+
+          <div>
+            <h2 class="header__fullgraphik2">Графік роботи</h2>
+            <pre class="header__fulltime2">
+12:00 — 20:00 середа
+12:00 — 20:00 четвер
+12:00 — 20:00 п’ятниця
+11:00 — 19:00 субота
+11:00 — 19:00 неділя
+            </pre>
+          </div>
+
+          <p class="header__fullvihid2">Вихідні: понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+
+        <div class="header__fullgridblock">
+          <hr class="header__fullhr">
+          <h2 class="header__fullgraphik">Графік роботи</h2>
+          <pre class="header__fulltime">
+12:00 — 20:00 середа
+12:00 — 20:00 четвер
+12:00 — 20:00 п’ятниця
+11:00 — 19:00 субота
+11:00 — 19:00 неділя
+          </pre>
+
+          <p class="header__fullvihid">Вихідні: понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+      </div>
+
+      <script>
+    document.addEventListener("DOMContentLoaded", function() {
+    const openMenuBtn = document.querySelector('.header__menu');
+    const openMenuBtn2 = document.querySelector('.header__menu__tablet')
+    const closeMenuBtn = document.querySelector('.header__exit');
+    const fullscreenMenu = document.querySelector('.header__fullscreen');
+    const menuLinks = fullscreenMenu.querySelectorAll('a');
+
+    function closeMenu() {
+      fullscreenMenu.style.display = 'none';
+    }
+
+    openMenuBtn2.addEventListener('click', () => {
+      fullscreenMenu.style.display = 'block';
+    });
+
+    openMenuBtn.addEventListener('click', () => {
+        fullscreenMenu.style.display = 'block';
+    });
+
+    closeMenuBtn.addEventListener('click', () => {
+        fullscreenMenu.style.display = 'none';
+    });
+
+    menuLinks.forEach(link => {
+      link.addEventListener('click', closeMenu);
+    });
+});
+      </script>
+
       <div class="header__menu__tablet"></div>
 
       <h1 class="header__text">ХУДОЖНІЙ МУЗЕЙ</h1>
