--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="/src/images/lastpage__logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -224,17 +225,23 @@
 неділя
         </pre>
 
-        <pre class="lastpage__adress">
-вул. М.
-Грушевського, 6;
-Київ, 01001
-тел. +38 (044)
-278-13-57
-факс +38 (044)
-278-74-54
-e-mail:
-info@namu.kiev.ua
-        </pre>
+        <p class="lastpage__adress">
+          <a href="https://www.google.com/maps/dir/%D0%A5%D0%B5%D1%80%D1%81%D0%BE%D0%BD/49.837230,+24.035886/@46.8105726,32.0803904,9.38z/data=!4m11!4m10!1m5!1m1!1s0x40c41aa25d9bf967:0xf3a5478c8e3121fe!2m2!1d32.616867!2d46.635417!1m3!2m2!1d24.035886!2d49.83723?hl=uk-UK&entry=ttu" class="lastpage2__fix">вул. М. <br>
+          Грушевського, 6; <br>
+          Київ, 01001 <br>
+          </a>
+          <a href="tel:+38044
+          278-13-57" class="lastpage2__fix">тел. +38 (044) <br>
+          278-13-57 <br>
+          </a>
+          <a href="tel:+38044
+          278-74-54" class="lastpage2__fix">факс +38 (044) <br>
+          278-74-54 <br>
+          </a>
+          <a href="mailto:info@namu.kiev.ua" class="lastpage2__fix">e-mail: <br>
+          info@namu.kiev.ua
+          </a>
+        </p>
       </div>
 
       <p class="lastpage__vihid">Вихідні понеділок,
@@ -286,13 +293,19 @@ info@namu.kiev.ua
       </div>
       <div class="lastpage2__contactblock">
         <h2 class="lastpage2__contact">Контакти:</h2>
-        <pre class="lastpage2__tell">
-вул. М. Грушевського, 6; Київ,
-01001
-тел. +38 (044) 278-13-57
-факс +38 (044) 278-74-54
-e-mail: info@namu.kiev.ua
-        </pre>
+        <p class="lastpage2__tell">
+          <a href="https://www.google.com/maps/dir/%D0%A5%D0%B5%D1%80%D1%81%D0%BE%D0%BD/49.837230,+24.035886/@46.8105726,32.0803904,9.38z/data=!4m11!4m10!1m5!1m1!1s0x40c41aa25d9bf967:0xf3a5478c8e3121fe!2m2!1d32.616867!2d46.635417!1m3!2m2!1d24.035886!2d49.83723?hl=uk-UK&entry=ttu" class="lastpage2__fix">вул. М. Грушевського, 6; Київ,
+          01001<br>
+          </a>
+          <a href="tel:+38044
+          278-13-57" class="lastpage2__fix">тел. +38 (044) 278-13-57 <br>
+          </a>
+          <a href="tel:+38044
+          278-74-54" class="lastpage2__fix">факс +38 (044) 278-74-54 <br>
+          </a>
+          <a href="mailto:info@namu.kiev.ua" class="lastpage2__fix">e-mail: info@namu.kiev.ua
+          </a>
+        </p>
       </div>
 
       <hr class="lastpage2__hr">
