--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,464 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <title>NA MU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/logo.svg"
+    >
+    <link rel="stylesheet" href="./styles/imports.scss">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
+
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body" id="body">
+    <header class="header page__header" id="header">
+      <picture class="header__wrapper">
+        <img
+          src="./images/NAMU.png"
+          alt="picture"
+          class="header__wrapper--image"
+        >
+
+        <a href="#page" class="header__logo logo">
+          <h1 class="logo__text">NA<br>MU</h1>
+        </a>
+      </picture>
+
+      <div class="header__container">
+        <div class="header__content">
+          <a href="#menu" class="header__icon icon">
+            <img
+              src="./images/menu.svg"
+              alt="menu"
+              class="icon__menu"
+            >
+          </a>
+          <section class="header__main">
+            <h1 class="header__main--title">ХУДОЖНІЙ<br> МУЗЕЙ</h1>
+
+            <div class="header__main--button">
+              <div href="#ticket" class="button">
+                <a class="button__text">квитки</a>
+                <a href="#ticket" class="button__array"></a>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div class="header__side side">
+          <div class="header__side--wrapper">
+            <a href="#footer" class="header__side--text">Події</a>
+            <span class="header__side--line"></span>
+
+          </div>
+        </div>
+      </div>
+
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="menu__container">
+          <div class="menu__top">
+            <a href="#" class="menu__icon icon"></a>
+
+            <nav class="menu__nav nav-menu">
+              <ul class="nav-menu__list">
+                <li class="nav-menu__item">
+                  <a href="#gallery" class="nav-menu__link">Галерея</a>
+                </li>
+                <li class="nav-menu__item">
+                  <a href="#about-us" class="nav-menu__link">Про Нас</a>
+                </li>
+                <li class="nav-menu__item">
+                  <a href="#actual-events" class="nav-menu__link">Виставки та події</a>
+                </li>
+                <li class="nav-menu__item">
+                  <a href="#contacts" class="nav-menu__link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="menu__line"></div>
+
+          <div class="menu__bottom">
+
+            <div class="menu__schedule schedule schedule--menu">
+              <p class="schedule__title">Графік роботи</p>
+
+              <ul class="schedule__list schedule__list--menu">
+                <li class="schedule__item">
+                  12:00 — 20:00 <span class="schedule__text">середа</span>
+                </li>
+                <li class="schedule__item">
+                  12:00 — 20:00 <span class="schedule__text">четвер</span>
+                </li>
+                <li class="schedule__item">
+                  12:00 — 20:00 <span class="schedule__text">п’ятниця</span>
+                </li>
+                <li class="schedule__item">
+                  11:00 — 19:00 <span class="schedule__text">субота</span>
+                </li>
+                <li class="schedule__item">
+                  11:00 — 19:00 <span class="schedule__text">неділя</span>
+                </li>
+              </ul>
+
+              <p class="schedule__atantion schedule__atantion--menu">
+                Вихідні: <span class="schedule__text">понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</span>
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <a href="#" class="menu__close"></a>
+    </aside>
+
+    <main class="main" id="actual-events">
+      <article class="event">
+        <div class="container">
+          <h1 class="event__title">Актуальні події</h1>
+          <section class="event__wrapper">
+            <div class="event__card">
+              <img
+                src="./images/picture1__desktop.png"
+                alt="Йду і повертаюсь"
+                class="event__picture"
+              >
+              <div class="exhibition">
+                <div class="exhibition__info">
+                  <p class="exhibition__info--title">ВИСТАВКА</p>
+                  <p class="exhibition__info--date">26.08-29.11.2019</p>
+                </div>
+                <div class="exhibition__title">
+                  <h3 class="exhibition__title--name">Йду і повертаюсь</h3>
+                  <p class="exhibition__title--rectangle"></p>
+                </div>
+                <p class="exhibition__subtitle">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </div>
+
+            <div class="event__card">
+              <img
+                src="./images/picture2__desktop.png"
+                alt="Йду і повертаюсь"
+                class="event__picture"
+              >
+              <div class="exhibition">
+                <div class="exhibition__info">
+                  <p class="exhibition__info--title">ВИСТАВКА</p>
+                  <p class="exhibition__info--date">26.08-29.11.2019</p>
+                </div>
+                <div class="exhibition__title">
+                  <h3 class="exhibition__title--name">І спогади і мрії</h3>
+                  <p class="exhibition__title--rectangle"></p>
+                </div>
+                <p class="exhibition__subtitle">Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+          </section>
+        </div>
+
+        <section class="lecture" id="ticket">
+          <div class="lecture__block">
+            <section class="lecture__info">
+              <p class="lecture__info--title">ВИСТАВКА</p>
+              <p class="lecture__info--date">26/08/2019 - 11:00</p>
+            </section>
+            <section class="lecture__exhibition">
+              <h2 class="lecture__exhibition--name">Від класицизму до романтизму</h2>
+            </section>
+          </div>
+        </section>
+      </article>
+
+      <article class="gallery" id="gallery">
+        <div class="container">
+          <h1 class="gallery__title">Галерея</h1>
+
+          <div class="gallery__image">
+            <img
+              src="./images/gallery1.png"
+              alt="img1"
+              class="gallery__image-1"
+            >
+            <img
+              src="./images/gallery2.png"
+              alt="img2"
+              class="gallery__image-2"
+            >
+            <img
+              src="./images/gallery3.png"
+              alt="img3"
+              class="gallery__image-3"
+            >
+            <img
+              src="./images/gallery4.png"
+              alt="img4"
+              class="gallery__image-4"
+            >
+          </div>
+
+          <div class="slider">
+            <ul class="slider__list">
+              <li class="slider__item">
+                <img
+                  src="./images/gallery1.png"
+                  alt="img1"
+                  class="slider__image"
+                >
+              </li>
+              <li class="slider__item">
+                <img
+                  src="./images/gallery2.2.png"
+                  alt="img2"
+                  class="slider__image"
+                >
+              </li>
+              <li class="slider__item">
+                <img
+                  src="./images/gallery3.png"
+                  alt="img3"
+                  class="slider__image"
+                >
+              </li>
+              <li class="slider__item">
+                <img
+                  src="./images/gallery4.png"
+                  alt="img4"
+                  class="slider__image"
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="slider__pagination">
+            <a
+              href="#"
+              data-slide="0"
+              class="slider__pagination--link"
+            >
+            </a>
+            <a
+              href="#"
+              data-slide="1"
+              class="slider__pagination--link"
+            >
+            </a>
+            <a
+              href="#"
+              data-slide="2"
+              class="slider__pagination--link"
+            >
+            </a>
+            <a
+              href="#"
+              data-slide="3"
+              class="slider__pagination--link"
+            >
+            </a>
+          </div>
+        </div>
+      </article>
+
+      <article class="subscription" id="about-us">
+        <div class="container">
+          <div class="subscription__info">
+            <h2 class="subscription__info--title">Підписка</h2>
+            <p class="subscription__info--subtitle">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          </div>
+
+          <form
+            action="get"
+            name="send"
+            onsubmit="this.reset(); return false;"
+            class="subscription__form"
+          >
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="subscription__form--email"
+              required
+            >
+            </input>
+            <button class="subscription__form--button" type="submit"></button>
+          </form>
+        </div>
+      </article>
+    </main>
+
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__content">
+          <section class="footer__icon">
+            <a href="#header" class="icon__link">
+              <img src="./images/logo.svg" alt="NAMU">
+            </a>
+
+            <div class="icon__wrapper">
+              <a
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                class="icon__link"
+                target="_blank"
+              >
+                <img
+                  src="./images/facebook.svg"
+                  alt="facebook"
+                  class="icon__fb"
+                >
+              </a>
+
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="icon__link"
+                target="_blank"
+              >
+                <img
+                  src="./images/instagram.svg"
+                  alt="instagram"
+                  class="icon__inst"
+                >
+              </a>
+            </div>
+          </section>
+
+          <div class="footer__schedule">
+            <section class="schedule-footer">
+              <p class="schedule-footer__title">Графік роботи
+              </p>
+              <ul class="schedule-footer__list">
+                <li>
+                  <span class="schedule-footer__bold">
+                    12:00 — 20:00
+                  </span>
+                  середа
+                </li>
+
+                <li>
+                  <span class="schedule-footer__bold">
+                    12:00 — 20:00
+                  </span>
+                  четвер
+                </li>
+
+                <li>
+                  <span class="schedule-footer__bold">
+                    12:00 — 20:00
+                  </span>
+                  п’ятниця
+                </li>
+
+                <li>
+                  <span class="schedule-footer__bold">
+                    11:00 — 19:00
+                  </span>
+                  субота
+                </li>
+
+                <li>
+                  <span class="schedule-footer__bold">
+                    11:00 — 19:00
+                  </span>
+                  неділя
+                </li>
+              </ul>
+
+              <p class="schedule-footer__info">
+                Вихідні понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </section>
+          </div>
+
+          <section class="footer__contacts contacts">
+            <p class="contacts__title">
+              Контакти:
+            </p>
+
+            <ul class="contacts__list" id="contacts">
+              <li class="contacts__item">
+                <a
+                  href="https://maps.app.goo.gl/YFUruMcHscTmBeuu7"
+                  class="contacts__link"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </li>
+
+              <li class="contacts__item">
+                <a href="tel:+38 (044) 278-13-57" class="contacts__link">
+                  тел. +38 (044) 278-13-57
+                </a>
+              </li>
+
+              <li class="contacts__item">
+                <a href="tel:+38(044) 278-74-54" class="contacts__link">
+                  факс +38 (044) 278-74-54
+                </a>
+              </li>
+
+              <li class="contacts__item">
+                <a href="mailto:info@namu.kiev.ua" class="contacts__link">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </li>
+            </ul>
+
+            <a href="header" class="contacts__button"></a>
+          </section>
+
+          <div class="footer__line"></div>
+
+          <section class="footer-nav">
+            <ul class="footer-nav__list">
+              <li class="footer-nav__item">
+                <a href="#gallery" class="footer-nav__link">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="footer-nav__item">
+                <a href="#about-us" class="footer-nav__link">
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="footer-nav__item">
+                <a href="#actual-events" class="footer-nav__link">
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="footer-nav__item">
+                <a href="#contacts" class="footer-nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </section>
+        </div>
+        <section class="footer__service">
+          <p class="footer__service--designer">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="footer__service--copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
