--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    >
+    <link rel="stylesheet" href="./styles/main.scss" >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <a
+        class="header__icon icon icon--menu"
+        href="./images/icons/burger-menu.svg"
+      ></a>
+
+      <div class="header__content">
+        <div class="header__top">
+          <a class="header__logo" href="#">
+            NA <br >
+            MU
+          </a>
+        </div>
+
+        <div class="header__block">
+          <div class="container">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <a class="header__link" href="#">КВИТКИ</a>
+          </div>
+          <a class="header__event" href="#">ПОДІЇ</a>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu">
+      <div class="menu__content">
+        <div class="menu__backdrop">
+          <a
+            class="menu__icon icon icon--close"
+            href="./images/icons/close.svg"
+          ></a>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="#">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Про Нас</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Виставки та події</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Контакти</a>
+            </li>
+          </ul>
+
+          <p class="menu__schedule">Графік роботи</p>
+
+          <ul>
+            <li>
+              <p>12:00 — 20:00 середа</p>
+            </li>
+            <li>
+              <p>12:00 — 20:00 четвер</p>
+            </li>
+            <li>
+              <p>12:00 — 20:00 п’ятниця</p>
+            </li>
+            <li>
+              <p>11:00 — 19:00 субота</p>
+            </li>
+            <li>
+              <p>11:00 — 19:00 неділя</p>
+            </li>
+          </ul>
+
+          <p>
+            Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
+            закриття музею
+          </p>
+        </div>
+      </div>
+    </aside>
+
+    <section class="actuell">
+      <h2 class="actuell__title">Актуальні події</h2>
+    </section>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
