--- a/src/index.html
+++ b/src/index.html
@@ -187,29 +187,40 @@
       <article class="gallery" id="gallery">
         <div class="container">
           <h1 class="gallery__title">Галерея</h1>
+          <div class="gallery__desktop">
+            <div class="gallery__slide gallery__slide-1">
+              <img
+                src="./images/gallery1.png"
+                alt="slide-1"
+                class="gallery__img"
+              >
+            </div>
 
-          <div class="gallery__image">
-            <img
-              src="./images/gallery1.png"
-              alt="img1"
-              class="gallery__image-1"
-            >
-            <img
-              src="./images/gallery2.png"
-              alt="img2"
-              class="gallery__image-2"
-            >
-            <img
-              src="./images/gallery3.png"
-              alt="img3"
-              class="gallery__image-3"
-            >
-            <img
-              src="./images/gallery4.png"
-              alt="img4"
-              class="gallery__image-4"
-            >
+            <div class="gallery__slide gallery__slide-2">
+              <img
+                src="./images/gallery2.png"
+                alt="slide-2"
+                class="gallery__img gallery__img-2"
+              >
+            </div>
+
+            <div class="gallery__slide gallery__slide-3">
+              <img
+                src="./images/gallery3.png"
+                alt="slide-3"
+                class="gallery__img gallery__img-3"
+              >
+            </div>
+
+            <div class="gallery__slide gallery__slide-4">
+              <img
+                src="./images/gallery4.png"
+                alt="slide-4"
+                class="gallery__img gallery__img-4"
+              >
+            </div>
           </div>
+
 
           <div class="slider">
             <ul class="slider__list">
