fixed position logo? add #home, centred section gallery and fixed footer buttom

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           class="header__wrapper--image"
         >
 
-        <a href="#page" class="header__logo logo">
+        <a href="#header" class="header__logo logo">
           <h1 class="logo__text">NA<br>MU</h1>
         </a>
       </picture>
@@ -428,7 +428,7 @@
               </li>
             </ul>
 
-            <a href="header" class="contacts__button"></a>
+            <a href="#header" class="contacts__button"></a>
           </section>
 
           <div class="footer__line"></div>
