--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
           class="header__wrapper--image"
         >
 
-        <a href="#header" class="header__logo logo">
-          <h1 class="logo__text">NA<br>MU</h1>
+        <a href="#footer"   class="header__logo logo">
+          <p class="logo__text">NA<br>MU</p>
         </a>
       </picture>
 
