added #home in logo link, fixed hover efect for pictures, fixed stretched in pictures, fixed collor in  arra header button, add menu open smoothly, and fixde horozintal gap in menu

--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
           class="header__wrapper--image"
         >
 
-        <a href="#footer"   class="header__logo logo">
-          <p class="logo__text">NA<br>MU</p>
+        <a href="#home" class="header__logo logo">
+          <h1 class="logo__text">NA<br>MU</h1>
         </a>
       </picture>
 
@@ -389,45 +389,46 @@
                 Каса припиняє роботу за 1 годину до закриття музею
               </p>
             </section>
+            <section class="footer__contacts contacts">
+              <p class="contacts__title">
+                Контакти:
+              </p>
+
+              <ul class="contacts__list" id="contacts">
+                <li class="contacts__item">
+                  <a
+                    href="https://maps.app.goo.gl/YFUruMcHscTmBeuu7"
+                    class="contacts__link"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </li>
+
+                <li class="contacts__item">
+                  <a href="tel:+38 (044) 278-13-57" class="contacts__link">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                </li>
+
+                <li class="contacts__item">
+                  <a href="tel:+38(044) 278-74-54" class="contacts__link">
+                    факс +38 (044) 278-74-54
+                  </a>
+                </li>
+
+                <li class="contacts__item">
+                  <a href="mailto:info@namu.kiev.ua" class="contacts__link">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </li>
+              </ul>
+
+              <a href="#header" class="contacts__button"></a>
+            </section>
           </div>
 
-          <section class="footer__contacts contacts">
-            <p class="contacts__title">
-              Контакти:
-            </p>
 
-            <ul class="contacts__list" id="contacts">
-              <li class="contacts__item">
-                <a
-                  href="https://maps.app.goo.gl/YFUruMcHscTmBeuu7"
-                  class="contacts__link"
-                  target="_blank"
-                >
-                  вул. М. Грушевського, 6; Київ, 01001
-                </a>
-              </li>
-
-              <li class="contacts__item">
-                <a href="tel:+38 (044) 278-13-57" class="contacts__link">
-                  тел. +38 (044) 278-13-57
-                </a>
-              </li>
-
-              <li class="contacts__item">
-                <a href="tel:+38(044) 278-74-54" class="contacts__link">
-                  факс +38 (044) 278-74-54
-                </a>
-              </li>
-
-              <li class="contacts__item">
-                <a href="mailto:info@namu.kiev.ua" class="contacts__link">
-                  e-mail: info@namu.kiev.ua
-                </a>
-              </li>
-            </ul>
-
-            <a href="#header" class="contacts__button"></a>
-          </section>
 
           <div class="footer__line"></div>
 
