--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,53 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA/MU</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+      integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="true"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="top-bar">
+        <a href="/" class="top-bar__burger">
+          <img
+            src="../src/images/icon/baseline-menu-24px.svg"
+            alt="/"
+            class="top-bar__burger-logo"
+          >
+        </a>
+        <p class="top-bar__base-logo">NA<br>MU</p>
+      </div>
+
+      <div class="botton-bar">
+        <p class="botton-bar__title">ХУДОЖНІЙ МУЗЕЙ</p>
+
+        <div class="botton-bar__ticket">
+          <div class="botton-bar__ticket-hd">
+            <p class="botton-bar__ticket__title">КВИТКИ</p>
+            <button class="botton-bar__ticket__button">
+              <img
+                src="images/icon/baseline-keyboard_arrow_right-24px (1).svg"
+                alt="sa"
+                class="botton-bar__ticket__img"
+              >
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
