--- a/src/index.html
+++ b/src/index.html
@@ -1,104 +1,289 @@
 <!DOCTYPE html>
 <html lang="en" class="page">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Museum</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" >
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" >
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600&display=swap"
       rel="stylesheet"
-    >
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" >
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
-    >
-    <link rel="stylesheet" href="./styles/main.scss" >
+    />
+    <link rel="stylesheet" href="./styles/main.scss" />
   </head>
   <body class="page__body">
     <header class="header">
-      <a
-        class="header__icon icon icon--menu"
-        href="./images/icons/burger-menu.svg"
-      ></a>
-
       <div class="header__content">
         <div class="header__top">
-          <a class="header__logo" href="#">
-            NA <br >
+          <a href="#menu" class="header__icon icon icon--menu"></a>
+          <a class="header__logo logo" href="#">
+            NA <br />
             MU
           </a>
         </div>
 
         <div class="header__block">
+
           <div class="container">
+            <a href="#menu" class="header__icon--block icon icon--menu"></a>
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
             <a class="header__link" href="#">КВИТКИ</a>
           </div>
           <a class="header__event" href="#">ПОДІЇ</a>
         </div>
+
       </div>
     </header>
 
-    <aside class="menu">
-      <div class="menu__content">
-        <div class="menu__backdrop">
-          <a
-            class="menu__icon icon icon--close"
-            href="./images/icons/close.svg"
-          ></a>
-
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a class="menu__link" href="#">Галерея</a>
+    <aside class="page__menu menu" id="menu">
+      <div class="container menu__content">
+        <nav class="menu__nav nav">
+          <a class="menu__icon icon icon--close" href="#"></a>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="">Галерея</a>
             </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#">Про Нас</a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#">Виставки та події</a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#">Контакти</a>
+            <li class="nav__item">
+              <a class="nav__link" href="">Виставки та події</a>
             </li>
           </ul>
-
-          <p class="menu__schedule">Графік роботи</p>
-
-          <ul>
-            <li>
-              <p>12:00 — 20:00 середа</p>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="">Про Нас</a>
             </li>
-            <li>
-              <p>12:00 — 20:00 четвер</p>
-            </li>
-            <li>
-              <p>12:00 — 20:00 п’ятниця</p>
-            </li>
-            <li>
-              <p>11:00 — 19:00 субота</p>
-            </li>
-            <li>
-              <p>11:00 — 19:00 неділя</p>
+            <li class="nav__item">
+              <a class="nav__link" href="">Контакти</a>
             </li>
           </ul>
+        </nav>
 
-          <p>
-            Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
-            закриття музею
+        <span class="menu__line"></span>
+
+        <div class="menu__temp">
+          <p class="menu__absatz">Графік роботи</p>
+
+          <p class="menu__schedule">
+            12:00 — 20:00 <span>середа</span> <br />
+            12:00 — 20:00 <span>четвер</span> <br />
+            12:00 — 20:00 <span>п’ятниця</span> <br />
+            11:00 — 19:00 <span>субота</span><br />
+            11:00 — 19:00 <span>неділя</span>
           </p>
         </div>
+
+        <p class="menu__text">
+          <span>Вихідні:</span> понеділок, вівторок <br />
+          Каса припиняє роботу за 1 годину до закриття музею
+        </p>
       </div>
+
+      <div class="menu__backdrop"></div>
     </aside>
 
+    <main>
+
     <section class="actuell">
-      <h2 class="actuell__title">Актуальні події</h2>
+      <div class="container">
+        <h2 class="actuell__title--main">Актуальні події</h2>
+        <div class="actuell__block">
+          <img class="actuell__img" src="./images/go-img.jpg" alt="Go" />
+          <div class="actuell__content">
+            <div class="actuell__temp">
+              <span class="actuell__span">ВИСТАВКА</span>
+              <p class="actuell__part">26.08-29.11.2019</p>
+            </div>
+            <div class="actuell__exgibition">
+              <h3 class="actuell__title">Йду і повертаюсь</h3>
+              <a href="#" class="actuell__link"></a>
+            </div>
+            <p class="actuell__text">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="actuell__block">
+          <img class="actuell__img" src="./images/dream-img.jpg" alt="Dream" />
+
+          <div class="actuell__content">
+            <div class="actuell__temp">
+              <span class="actuell__span">ВИСТАВКА</span>
+              <p class="actuell__part">26.08-29.11.2019</p>
+            </div>
+
+            <div class="actuell__exgibition">
+              <h3 class="actuell__title">І спогади і мрії</h3>
+              <a href="#" class="actuell__link"></a>
+            </div>
+
+            <p class="actuell__text">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="actuell__rama">
+        <img class="actuell__picture" src="./images/sky-img.jpg" alt="Sky" />
+
+        <div class="actuell__sky">
+          <div class="actuell__temp--min">
+            <span class="actuell__span">ЛЕКЦІЯ</span>
+            <p class="actuell__part">26/08/2019 - 11:00</p>
+          </div>
+          <h3 class="actuell__title">
+            Від класицизму до <br />
+            романтизму
+          </h3>
+        </div>
+      </div>
     </section>
+
+    <section class="gallery">
+      <div class="container">
+
+        <h2 class="gallery__title">Галерея</h2>
+         <!-- <div class="gallery__content"> -->
+        <div class="gallery__block pictures">
+        <a class="gallery__link pictures__item--small" href="">
+          <img class="gallery__picture pictures__img" src="./images/gallery/picture1.jpg" alt="Gallery picture">
+        </a>
+        <a class="gallery__link pictures__item--big" href="">
+          <img class="gallery__picture pictures__img" src="./images/gallery/picture2.jpg" alt="Gallery picture">
+        </a>
+      </div>
+        <div class="gallery__block pictures">
+        <a class="gallery__link pictures__item--left" href="">
+          <img class="gallery__picture pictures__img" src="./images/gallery/picture3.jpg" alt="Gallery picture">
+        </a>
+        <a class="gallery__link pictures__item--right" href="">
+          <img class="gallery__picture pictures__img" src="./images/gallery/picture4.jpg" alt="Gallery picture">
+        </a>
+      </div>
+      <!-- </div> -->
+</div>
+    </section>
+
+    <section class="subscribe">
+      <div class="container">
+
+      <h2 class="subscribe__title">Підписка</h2>
+      <p class="subscribe__text">
+        Бути в курсі всіх актуальних подій та останніх новин.
+
+        <form class="subscribe__form">
+          <input class="subscribe__input"
+          type="text" name="email"
+          placeholder="E-mail">
+          <button class="subscribe__btn"
+          type="submit"
+
+          ></button>
+        </form>
+      </p>
+    </div>
+    </section>
+
+  </main>
+
+    <footer class="footer">
+      <div class="container">
+
+        <div class="footer__grid">
+
+          <div class="footer__block--1">
+      <a class="footer__logo logo" href="#">
+        NA <br /> MU
+      </a>
+
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a class="footer__link--facebook icon"
+          href="https://www.facebook.com/"
+          target="_blank">
+          </a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link--insta icon"
+          href="https://www.instagram.com/"
+          target="_blank">
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="footer__block--2">
+      <div class="footer__temp">
+        <p class="footer__absatz">Графік роботи</p>
+        <p class="footer__schedule">
+          <span> 12:00 — 20:00</span> середа <br />
+          <span>12:00 — 20:00 </span>четвер <br />
+          <span>12:00 — 20:00 </span>п’ятниця<br />
+          <span> 11:00 — 19:00</span> субота<br />
+          <span> 11:00 — 19:00</span> неділя
+        </p>
+
+        <p class="footer__text">
+          <span>Вихідні:</span> понеділок, вівторок <br />
+          Каса припиняє роботу за 1 годину до закриття музею
+        </p>
+      </div>
+    </div>
+
+    <div class="footer__block--3">
+
+      <div class="footer__adress adress">
+        <p class="adress__contact">Контакти:</p>
+        <p class="adress__adress">
+
+         вул. М. Грушевського, 6; Київ, 01001
+        </p>
+        <a class="adress__link" href="">тел. +38 (044) 278-13-57</a>
+        <a class="adress__link" href="">факс +38 (044) 278-74-54</a>
+        <a class="adress__link" href="">e-mail: info@namu.kiev.ua</a>
+      </div>
+    </div>
+
+
+      <span class="footer__line"></span>
+
+
+        <ul class="footer__list--1">
+          <li>
+            <a class="footer__link--1"  href="">Галерея</a>
+          </li>
+          <li >
+            <a class="footer__link--1"  href="">Виставки та події</a>
+          </li>
+        </ul>
+        <ul class="footer__list--2">
+          <li >
+            <a class="footer__link--1"  href="">Про Нас</a>
+          </li>
+          <li >
+            <a class="footer__link--1"  href="">Контакти</a>
+          </li>
+        </ul>
+
+
+      <p class="footer__design">Designed by Zhyriada Marina</p>
+      <p class="footer__copy">Copyright © 2019. All Rights Reserved.</p>
+    </div>
+
+</div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
