--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
 
         <div class="actuell__sky">
 
-          <div class="actuell__temp--min">
+          <div class="actuell__sky--part">
             <span class="actuell__span">ЛЕКЦІЯ</span>
             <p class="actuell__part">26/08/2019 - 11:00</p>
           </div>
@@ -165,7 +165,10 @@
         <a class="gallery__link pictures__item--big" href="">
           <img class="gallery__picture pictures__img" src="./images/gallery/picture2.jpg" alt="Gallery picture">
         </a>
-      </div>
+        <a class="gallery__link pictures__item--small--gus" href="">
+          <img class="gallery__picture pictures__img" src="./images/gus.jpg" alt="Gallery picture">
+        </a>
+        </div>
         <div class="gallery__block pictures">
         <a class="gallery__link pictures__item--left" href="">
           <img class="gallery__picture pictures__img" src="./images/gallery/picture3.jpg" alt="Gallery picture">
@@ -174,7 +177,7 @@
           <img class="gallery__picture pictures__img" src="./images/gallery/picture4.jpg" alt="Gallery picture">
         </a>
       </div>
-   
+
 </div>
     </section>
 
@@ -188,7 +191,8 @@
         <form class="subscribe__form">
           <input class="subscribe__input"
           type="text" name="email"
-          placeholder="E-mail">
+          placeholder="E-mail"
+          required>
           <button class="subscribe__btn"
           type="submit"
 
@@ -248,13 +252,14 @@
 
       <div class="footer__adress adress">
         <p class="adress__contact">Контакти:</p>
-        <p class="adress__adress">
+        <a class="adress__adress"
+        href="https://www.google.com.ua/maps/place/%D0%9D%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D1%8B/@50.4494274,30.5306505,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505!16s%2Fm%2F02prqms?hl=ru&entry=ttu">
 
          вул. М. Грушевського, 6; Київ, 01001
-        </p>
-        <a class="adress__link" href="">тел. +38 (044) 278-13-57</a>
-        <a class="adress__link" href="">факс +38 (044) 278-74-54</a>
-        <a class="adress__link" href="">e-mail: info@namu.kiev.ua</a>
+        </a>
+        <a class="adress__link" href="tel:+380442781357">тел. +38 (044) 278-13-57</a>
+        <a class="adress__link" href="fax:+380442781357">факс +38 (044) 278-74-54</a>
+        <a class="adress__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
       </div>
     </div>
 
