add hover img. adoptation aside menu

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
       href="https://fonts.gstatic.com"
       crossorigin="true"
     >
+    <link
+      rel="icon"
+      href="../src/images/icon/NA MU (1).svg"
+      type="image/x-icon"
+    >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
@@ -86,15 +91,16 @@
       </div>
 
       <div class="menu__bottom">
-        <p class="menu__bottom__graf">Графік роботи</p>
-
-        <p class="menu__bottom__graf--day">
-          <span class="time">12:00 — 20:00</span> середа<br>
-          <span class="time">12:00 — 20:00</span> четвер<br>
-          <span class="time">12:00 — 20:00</span> п’ятниця<br>
-          <span class="time">11:00 — 19:00</span> субота<br>
-          <span class="time">11:00 — 19:00</span> неділя<br>
-        </p>
+        <div class="menu__bottom-container">
+          <p class="menu__bottom__graf">Графік роботи</p>
+          <p class="menu__bottom__graf--day">
+            <span class="time">12:00 — 20:00</span> середа<br>
+            <span class="time">12:00 — 20:00</span> четвер<br>
+            <span class="time">12:00 — 20:00</span> п’ятниця<br>
+            <span class="time">11:00 — 19:00</span> субота<br>
+            <span class="time">11:00 — 19:00</span> неділя<br>
+          </p>
+        </div>
 
         <p class="menu__bottom__graf--freeday">
           <span class="time">Вихідні:</span> понеділок, вівторок
