--- a/src/index.html
+++ b/src/index.html
@@ -283,11 +283,17 @@
           <div class="footer__contacts contacts" id="contacts">
             <p class="contacts__title">Контакти:</p>
             <p class="contacts__content">
-              вул. М. Грушевського, 6; <br>
-              Київ, 01001 <br>
-              тел. +38 (044) 278-13-57 <br>
-              факс +38 (044) 278-74-54 <br>
-              e-mail: info@namu.kiev.ua
+              <a
+                class="contacts__link"
+                href="https://maps.app.goo.gl/kqFpgsm3pME8cBuv5"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; <br>
+                Київ, 01001 <br>
+              </a>
+              тел.<a class="contacts__link" href="tel:+380442781357"> +38 (044) 278-13-57</a>
+              факс<a class="contacts__link" href="tel:+380442787454"> +38 (044) <br> 278-74-54 <br></a>
+              e-mail:<a class="contacts__link" href="mailto:info@namu.kiev.ua"><br> info@namu.kiev.ua</a>
             </p>
           </div>
 
@@ -321,7 +327,9 @@
 
         <div class="footer__copy">
           <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
-          <p class="footer__text">Designed by Zhyriada Marina</p>
+          <p class="footer__text">
+            Designed by Zhyriada Marina
+          </p>
         </div>
       </div>
     </footer>
