--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link
+      rel="icon"
+      href="./images/icons/logo.svg"
+      type="image/svg+xml"
+    >
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/app.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
@@ -11,6 +16,12 @@
       href="https://fonts.gstatic.com"
       crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    >
   </head>
   <body>
     <div class="page-wrapp">
@@ -165,6 +176,7 @@
 
       <section class="gallery">
         <div class="container">
+          <h2 class="title-section">Галерея</h2>
           <div class="center">
             <img
               class="gallery__img"
@@ -235,6 +247,7 @@
                 action="#"
                 autocomplete="off"
                 onsubmit="this.reset(); return false;"
+                class="subscribe__form-email"
               >
                 <input
                   class="subscribe__email"
@@ -242,8 +255,8 @@
                   required
                   placeholder="E-mail"
                 >
+                <button type="submit" class="subscribe__arrow"></button>
               </form>
-              <div class="subscribe__arrow"></div>
             </div>
           </div>
         </div>
@@ -257,10 +270,10 @@
                 <img src="images/icons/logo.svg" alt="footer logo">
               </div>
               <div class="footer__social-link">
-                <a href="#" class="facebook-link">
+                <a href="https://www.facebook.com/" class="facebook-link">
                   <img src="images/icons/facebook.svg" alt="facebook">
                 </a>
-                <a href="#" class="instagram-link">
+                <a href="https://www.instagram.com/" class="instagram-link">
                   <img src="images/icons/instagram.svg" alt="instagram">
                 </a>
               </div>
@@ -340,7 +353,6 @@
       </footer>
     </div>
   </body>
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script type="text/javascript" src="scripts/main.js"></script>
 </html>
