--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +47,7 @@
               <a class="header__link-ticket" href="#">Квитки</a>
               <a class="header__link-arrow" href="#"></a>
             </div>
-            <a class="header__bottom-events" href="#">
+            <a class="header__bottom-events" href="#footer">
               Подій
             </a>
           </div>
@@ -62,7 +62,7 @@
               <nav class="nav nav--menu">
                 <ul class="nav__list">
                   <li class="nav__item nav--one-col">
-                    <a class="nav__link" href="#galery">Галерея</a>
+                    <a class="nav__link" href="#gallery">Галерея</a>
                   </li>
                   <li class="nav__item nav--two-col">
                     <a class="nav__link" href="#about-us">Про Нас</a>
@@ -71,7 +71,7 @@
                     <a class="nav__link" href="#events">Виставки та події</a>
                   </li>
                   <li class="nav__item nav--two-col">
-                    <a class="nav__link" href="#contact">Контакти</a>
+                    <a class="nav__link" href="#footer">Контакти</a>
                   </li>
                 </ul>
               </nav>
@@ -174,7 +174,7 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="container">
           <h2 class="title-section">Галерея</h2>
           <div class="center">
@@ -229,7 +229,7 @@
         </div>
       </section>
 
-      <section class="subscribe">
+      <section class="subscribe" id="about-us">
         <div class="container">
           <div class="subscribe__content">
             <div class="subscribe__title">
@@ -262,7 +262,7 @@
         </div>
       </section>
 
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <div class="container">
           <div class="footer__content">
             <div class="footer__icons">
@@ -323,6 +323,9 @@
               </a>
             </div>
             <div class="footer__bottom">
+              <a href="#" class="footer__up-icon">
+                <img src="images/icons/up-row.svg" alt="up-icon">
+              </a>
               <nav class="footer__nav">
                 <ul class="footer__nav-list">
                   <li class="footer__nav-item">
