--- a/src/index.html
+++ b/src/index.html
@@ -324,7 +324,7 @@
             </div>
             <div class="footer__bottom">
               <a href="#" class="footer__up-icon">
-                <img src="images/icons/up-row.svg" alt="up-icon">
+                <img src="images/icons/up-row.svg" alt="up-icon-row">
               </a>
               <nav class="footer__nav">
                 <ul class="footer__nav-list">
