--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
 <strong>11:00 — 19:00</strong> неділя<br>
 </p>
 
-<strong>Вихідні:</strong> понеділок, вівторок
+<strong>Вихідні:</strong> понеділок, вівторок<br>
 Каса припиняє роботу за 1 годину
 до закриття музею
             </div>
