--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="images/NA MU.png"
+     type="image/x-icon">
   </head>
   <body class="body">
     <header class="header">
