--- a/src/index.html
+++ b/src/index.html
@@ -233,9 +233,7 @@
           </h2>
 
           <div class="gallery__swiper swiper">
-            <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
-              <!-- Slides -->
               <div class="swiper-slide">
                 <img
                       src="./images/gellery/gellery-img-1.png"
@@ -246,70 +244,30 @@
               <div class="swiper-slide">
                 <img
                       src="./images/gellery/gellery-img-2.png"
-                      alt="Наречена. Федір Кричевський"
+                      alt="Гуси. Кіріак Костанді"
                       class="slideshow__picture"
                     >
               </div>
               <div class="swiper-slide">
                 <img
                       src="./images/gellery/gellery-img-3.png"
-                      alt="Наречена. Федір Кричевський"
+                      alt="Глухомань. Село взимку. Петро Левченко"
                       class="slideshow__picture"
                     >
               </div>
               <div class="swiper-slide">
                 <img
                       src="./images/gellery/gellery-img-5.png"
-                      alt="Наречена. Федір Кричевський"
+                      alt="На море. Микола Глущенко"
                       class="slideshow__picture"
                     >
               </div>
             </div>
-            <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
-            <!-- <div class="swiper-pagination"></div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-pagination"></div> -->
           </div>
 
           <div class="gallery__pictures">
             <div class="gallery__slideshow slideshow">
-
-              <input
-                type="radio"
-                id="button-1"
-                name="controls"
-                checked="checked"
-                class="slideshow__input slideshow__input--1"
-              >
-
-              <label for="button-1" class="slideshow__label slideshow__label--1"></label>
-
-              <input
-                type="radio"
-                id="button-2"
-                name="controls"
-                class="slideshow__input slideshow__input--2"
-              >
-
-              <label for="button-2" class="slideshow__label slideshow__label--2"></label>
-
-              <input
-                type="radio"
-                id="button-3"
-                name="controls"
-                class="slideshow__input slideshow__input--3"
-              >
-              <label for="button-3" class="slideshow__label slideshow__label--3"></label>
-
-              <input
-                type="radio"
-                id="button-5"
-                name="controls"
-                class="slideshow__input slideshow__input--5"
-              >
-              <label for="button-5" class="slideshow__label slideshow__label--5"></label>
-
               <div id="slideshow-inner" class="slideshow__inner">
                 <ul class="slideshow__list">
                   <li class="slideshow__slide slide slide--1">
@@ -532,11 +490,37 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
       var mySwiper = new Swiper('.swiper', {
-        // slidesPerView: autofill,
+        slidesPerView: 1.2,
+        loop: true,
         pagination: {
           el: '.swiper-pagination',
           clickable: true,
-          loop: true,
+        },
+        breakpoints: {
+          370: {
+            slidesPerView: 1.2,
+          },
+          400: {
+            slidesPerView: 1.6,
+          },
+          500: {
+            slidesPerView: 1.8,
+          },
+          580: {
+            slidesPerView: 2,
+          },
+          700: {
+            slidesPerView: 2,
+          },
+          800: {
+            slidesPerView: 2.2,
+          },
+          900: {
+            slidesPerView: 2.5,
+          },
+          1000: {
+            slidesPerView: 2.7,
+          },
         },
         navigation: {
           nextEl: '.swiper-button-next',
