--- a/src/index.html
+++ b/src/index.html
@@ -227,7 +227,9 @@
           <p> Designed by Zhyriada Marina</p>
         </div>
       </footer>
-      <script>let modal;
+      <script>
+      'use strict'
+      let modal;
 
         function toggleModal(event) {
           event.stopPropagation();
